added angles component

--- a/fun-with-triangles/src/pages/Hypotenuse.css
+++ b/fun-with-triangles/src/pages/Hypotenuse.css
@@ -18,7 +18,7 @@
     border-top: 70px solid transparent;
     margin-inline-start: 8rem;
     position: relative;
-    margin-bottom: 5rem;
+    margin: 5rem auto;
 }
 
 .a {
