--- a/fun-with-triangles/src/pages/Inequality.css
+++ b/fun-with-triangles/src/pages/Inequality.css
@@ -66,4 +66,6 @@
     border: 5px solid var(--primary-color02);
     padding: 1rem;
     color: var(--secondary-color);
+    width: fit-content;
+    margin: auto;
 }
