--- a/fun-with-triangles/src/pages/Quiz.css
+++ b/fun-with-triangles/src/pages/Quiz.css
@@ -1,3 +1,39 @@
 .quiz-component {
     color: var(--third-color);
+    padding: 2rem;
+}
+
+.btn-quiz {
+    text-align: center;
+    margin-left: auto;
+}
+
+.align-justify {
+    text-align: justify;
+}
+
+.quiz-input {
+    cursor: pointer;
+}
+
+.margin-quiz-input {
+    margin: 0.5rem 1rem;
+}
+
+.mr-1 {
+    margin-right: 1rem;
+}
+
+.question-container {
+    width: 100%!important;
+    text-align: justify!important;
+    margin: 1rem 0px;
+}
+
+.quiz-form {
+    margin: 1rem 0px;
+}
+
+.mb-1 {
+    margin-bottom: 1rem;
 }
